WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101284
RenderGeometryMap asserts when loading
http://en.softonic.com/mac
https://bugs.webkit.org/show_bug.cgi?id=101284
Summary
RenderGeometryMap asserts when loading http://en.softonic.com/mac
Simon Fraser (smfr)
Reported
2012-11-05 17:24:31 PST
RenderGeometryMap asserts when loading
http://en.softonic.com/mac
Attachments
Patch
(4.53 KB, patch)
2012-11-05 17:27 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-11-05 17:27:56 PST
Created
attachment 172451
[details]
Patch
Simon Fraser (smfr)
Comment 2
2012-11-05 17:28:47 PST
<
rdar://problem/11540560
>
Tim Horton
Comment 3
2012-11-05 17:40:40 PST
Comment on
attachment 172451
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172451&action=review
Seems reasonable!
> Source/WebCore/page/FrameView.cpp:711 > + // If we expect to update compositing after an incipient layout, don't do so here.
incipient :\
> Source/WebCore/page/FrameView.cpp:1073 > + m_doingPreLayoutStyleUpdate = true;
TemporaryChange thing? Or I guess it doesn’t matter in this case.
Simon Fraser (smfr)
Comment 4
2012-11-05 17:46:27 PST
http://trac.webkit.org/changeset/133544
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug